--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -170,7 +170,7 @@
                                         Congratulations on signing up at Institute. Please use the following four digits
                                         numerical One Time Password to validate your email address.</h1><br>
                                     <h1 style="color:#455056; font-weight:500; margin-top:10px;font-size:16px;font-family:Arial, Helvetica, sans-serif;text-align:center ; line-height:2">
-                                        <span style="font-weight:400; color:#0c5394">OTP - </span></h1><br>
+                                        <span style="font-weight:400; color:#0c5394">OTP - 554563</span></h1><br>
 
                                     <span style=" margin:29px 0 26px; border-bottom:1px solid #cecece; width:100px;"></span>
                                     <h1 style="color:#455056; font-weight:500; margin-top:2px;font-size:15px;font-family:'Rubik',sans-serif;text-align:justify; line-height:2">
@@ -178,7 +178,7 @@
                                         succeed! </h1><br>
 
                                     <h1 style="color:#455056; font-weight:500; margin-top:2px;font-size:18px;font-family:Arial, Helvetica, sans-serif;text-align:center ; line-height:2">
-                                        <span style="font-weight:750; color:#ff7a59">Thank You!!!</span></h1><br>
+                                        <span style="font-weight:750;">Thank You!!!</span></h1><br>
 
                                     </p>
                                 </td>
