--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,125 +1,4 @@
-<!--<!DOCTYPE html>-->
-<!--<html lang="en" xmlns:th="https://thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml">-->
-<!--<head>-->
-<!--    <meta charset="ISO-8859-1">-->
-<!--    <title>Thymeleaf</title>-->
-
-<!--    <style>-->
-<!--    table, td, div, h1, p {font-family: Arial, sans-serif;}-->
-
-
-<!--    </style>-->
-<!--</head>-->
-<!--<body style="margin:0;padding:0;">-->
-<!--<table role="presentation" style="width:100%;border-collapse:collapse;border:0;border-spacing:0;background:#ffffff;">-->
-<!--    <tr>-->
-<!--        <td align="center" style="padding:0;">-->
-<!--            <table role="presentation"-->
-<!--                   style="width:602px;border-collapse:collapse;border:1px solid #cccccc;border-spacing:0;text-align:left;">-->
-<!--                <tr>-->
-<!--                    <td align="center">-->
-<!--                        <img src="https://merojob.com/media/uploads/job/banner/Nepla_banner_m0hMxAe_zT9wCvZ_Egk2e4I.jpg"-->
-<!--                             alt="" width="100%" height="100%" style="height:auto;display:block;"/>-->
-<!--                    </td>-->
-<!--                </tr>-->
-<!--                <tr>-->
-<!--                    <td style="padding:36px 30px 42px 30px;">-->
-<!--                        <table role="presentation"-->
-<!--                               style="width:100%;border-collapse:collapse;border:0;border-spacing:0;">-->
-<!--                            <tr>-->
-<!--                                <td>-->
-<!--                                    <h1 style="font-size:24px;margin:0 0 20px 0;font-family:Arial,sans-serif;"-->
-<!--                                        th:text="${message}"></h1>-->
-<!--                                    <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;font-family:Arial,sans-serif;">-->
-<!--                                        aaa ipsum dolor sit amet, consectetur adipiscing elit. In tempus adipiscing-->
-<!--                                        felis, sit amet blandit ipsum volutpat sed. Morbi porttitor, eget accumsan et-->
-<!--                                        dictum, nisi libero ultricies ipsum, posuere neque at erat.</p>-->
-<!--                                    <p style="margin:0;font-size:16px;line-height:24px;font-family:Arial,sans-serif;"><a-->
-<!--                                            href="http://www.example.com"-->
-<!--                                            style="color:#ee4c50;text-decoration:underline;">In tempus felis blandit</a>-->
-<!--                                    </p>-->
-<!--                                </td>-->
-<!--                            </tr>-->
-<!--                            <tr>-->
-<!--                                <td style="padding:0;">-->
-<!--                                    <table role="presentation"-->
-<!--                                           style="width:100%;border-collapse:collapse;border:0;border-spacing:0;">-->
-<!--                                        <tr>-->
-<!--                                            <td style="width:260px;padding:0;vertical-align:top;color:#153643;">-->
-<!--                                                <p style="margin:0 0 25px 0;font-size:16px;line-height:24px;font-family:Arial,sans-serif;">-->
-<!--                                                    <img src="https://assets.codepen.io/210284/left.gif" alt=""-->
-<!--                                                         width="260" style="height:auto;display:block;"/></p>-->
-<!--                                                <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;font-family:Arial,sans-serif;">-->
-<!--                                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tempus-->
-<!--                                                    adipiscing felis, sit amet blandit ipsum volutpat sed. Morbi-->
-<!--                                                    porttitor, eget accumsan dictum, est nisi libero ultricies ipsum, in-->
-<!--                                                    posuere mauris neque at erat.</p>-->
-<!--                                                <p style="margin:0;font-size:16px;line-height:24px;font-family:Arial,sans-serif;">-->
-<!--                                                    <a href="http://www.example.com"-->
-<!--                                                       style="color:#ee4c50;text-decoration:underline;">Blandit ipsum-->
-<!--                                                        volutpat sed</a></p>-->
-<!--                                            </td>-->
-<!--                                            <td style="width:20px;padding:0;font-size:0;line-height:0;">&nbsp;</td>-->
-<!--                                            <td style="width:260px;padding:0;vertical-align:top;color:#153643;">-->
-<!--                                                <p style="margin:0 0 25px 0;font-size:16px;line-height:24px;font-family:Arial,sans-serif;">-->
-<!--                                                    <img src="https://assets.codepen.io/210284/right.gif" alt=""-->
-<!--                                                         width="260" style="height:auto;display:block;"/></p>-->
-<!--                                                <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;font-family:Arial,sans-serif;">-->
-<!--                                                    Morbi porttitor, eget est accumsan dictum, nisi libero ultricies-->
-<!--                                                    ipsum, in posuere mauris neque at erat. Lorem ipsum dolor sit amet,-->
-<!--                                                    consectetur adipiscing elit. In tempus adipiscing felis, sit amet-->
-<!--                                                    blandit ipsum volutpat sed.</p>-->
-<!--                                                <p style="margin:0;font-size:16px;line-height:24px;font-family:Arial,sans-serif;">-->
-<!--                                                    <a href="http://www.example.com"-->
-<!--                                                       style="color:#ee4c50;text-decoration:underline;">In tempus felis-->
-<!--                                                        blandit</a></p>-->
-<!--                                            </td>-->
-<!--                                        </tr>-->
-<!--                                    </table>-->
-<!--                                </td>-->
-<!--                            </tr>-->
-<!--                        </table>-->
-<!--                    </td>-->
-<!--                </tr>-->
-<!--                <tr>-->
-<!--                    <td style="padding:30px;background:#ee4c50;">-->
-<!--                        <table role="presentation"-->
-<!--                               style="width:100%;border-collapse:collapse;border:0;border-spacing:0;font-size:9px;font-family:Arial,sans-serif;">-->
-<!--                            <tr>-->
-<!--                                <td style="padding:0;width:50%;" align="left">-->
-<!--                                    <p style="margin:0;font-size:14px;line-height:16px;font-family:Arial,sans-serif;color:#ffffff;">-->
-<!--                                        &reg; Someone, Somewhere 2021<br/><a href="http://www.example.com"-->
-<!--                                                                             style="color:#ffffff;text-decoration:underline;">Unsubscribe</a>-->
-<!--                                    </p>-->
-<!--                                </td>-->
-<!--                                <td style="padding:0;width:50%;" align="right">-->
-<!--                                    <table role="presentation"-->
-<!--                                           style="border-collapse:collapse;border:0;border-spacing:0;">-->
-<!--                                        <tr>-->
-<!--                                            <td style="padding:0 0 0 10px;width:38px;">-->
-<!--                                                <a href="http://www.twitter.com/" style="color:#ffffff;"><img-->
-<!--                                                        src="https://assets.codepen.io/210284/tw_1.png" alt="Twitter"-->
-<!--                                                        width="38" style="height:auto;display:block;border:0;"/></a>-->
-<!--                                            </td>-->
-<!--                                            <td style="padding:0 0 0 10px;width:38px;">-->
-<!--                                                <a href="http://www.facebook.com/" style="color:#ffffff;"><img-->
-<!--                                                        src="https://assets.codepen.io/210284/fb_1.png" alt="Facebook"-->
-<!--                                                        width="38" style="height:auto;display:block;border:0;"/></a>-->
-<!--                                            </td>-->
-<!--                                        </tr>-->
-<!--                                    </table>-->
-<!--                                </td>-->
-<!--                            </tr>-->
-<!--                        </table>-->
-<!--                    </td>-->
-<!--                </tr>-->
-<!--            </table>-->
-<!--        </td>-->
-<!--    </tr>-->
-<!--</table>-->
-<!--</body>-->
-<!--</html>-->
-<!doctype html>
+<!Doctype html>
 <html lang="en-US">
 
 <head>
@@ -134,18 +13,19 @@
 
 
 
+
     </style>
 </head>
 
 <body marginheight="0" topmargin="0" marginwidth="0" style="margin: 0px; background-color: #f2f3f8;" leftmargin="0">
 <table cellspacing="0" border="0" cellpadding="0" width="100%" bgcolor="#f2f3f8"
-       style="@import url(https://fonts.googleapis.com/css?family=Rubik:300,400,500,700|Open+Sans:300,400,600,700); font-family: 'Open Sans', sans-serif;">
+       style="@import url(https://fonts.googleapis.com/css?family=Rubik:300,400,500,700|Open+Sans:300,400,600,700); font-family: 'Open Sans', sans-serif;margin-top:100px;">
     <tr>
         <td>
             <table style="background-color: #292b29; max-width:670px;
              margin:0 auto;" width="100%" border="0" align="center" cellpadding="0" cellspacing="0">
-                <tr style="width : 100%; background-color:#292b29">
-                    <td>
+                <tr style="width : 100%; background-color:#005ca1">
+                    <td style="border: 0.2px;">
                         <br>
                         <table width="95%" border="0" align="center"
                                cellpadding="0" cellspacing="0"
@@ -162,15 +42,18 @@
   <img width="250"
        src="https://nchl.com.np/uploads/news/NCH-Logo1__1617163562.jpg"
   >
+<!--                                            <img width="250" height="200"-->
+<!--       src="https://connectips.com/knowmore/image/cips_logo.png"-->
+<!--  >-->
 
                                         </span></h1>
                                     <h1 style="color:#455056; font-weight:530; margin:0;font-size:15px;font-family:'Rubik',sans-serif; text-align:start;  ">
                                         Hi, </h1>
                                     <h1 style="color:#455056; font-weight:500; margin-top:10px;font-size:15px;font-family:'Rubik',sans-serif;text-align:justify; line-height:2">
-                                        Congratulations on signing up at Institute. Please use the following four digits
+                                        Congratulations Piyush Yadav on signing up at NCHL. Please use the following four digits
                                         numerical One Time Password to validate your email address.</h1><br>
                                     <h1 style="color:#455056; font-weight:500; margin-top:10px;font-size:16px;font-family:Arial, Helvetica, sans-serif;text-align:center ; line-height:2">
-                                        <span style="font-weight:400; color:#0c5394">OTP - 554563</span></h1><br>
+                                        <span style="font-weight:400; color:#0c5394"><strong>OTP - 554563</strong></span></h1><br>
 
                                     <span style=" margin:29px 0 26px; border-bottom:1px solid #cecece; width:100px;"></span>
                                     <h1 style="color:#455056; font-weight:500; margin-top:2px;font-size:15px;font-family:'Rubik',sans-serif;text-align:justify; line-height:2">
@@ -178,7 +61,7 @@
                                         succeed! </h1><br>
 
                                     <h1 style="color:#455056; font-weight:500; margin-top:2px;font-size:18px;font-family:Arial, Helvetica, sans-serif;text-align:center ; line-height:2">
-                                        <span style="font-weight:750;">Thank You!!!</span></h1><br>
+                                        <span style="font-weight:750;">Thank You.</span></h1><br>
 
                                     </p>
                                 </td>
@@ -193,7 +76,7 @@
 
                                     <br><br>
                                     <h1 style="color:white;padding:0 35px; font-weight:500; margin-top:2px;font-size:15px;font-family:'Rubik',sans-serif;vertical-align:start; line-height:2">
-                                       Nepal Clearing House, Kamaladi , Kathmandu ,
+                                        Nepal Clearing House, Kamaladi , Kathmandu ,
                                         Nepal, +01-5566456 </h1>
                                     <br>
                                 </td>
