--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -34,7 +34,7 @@
         <td>
             <table style="background-color: #252938; max-width:670px;
              margin:0 auto;" width="100%" border="0" align="center" cellpadding="0" cellspacing="0">
-                <tr style="width : 100%; background-color:#005ca1">
+                <tr style="width : 100%; background-color:#445a6a">
                     <td style="border: 0.2px;">
                         <br>
                         <table border="0" align="center"
